--- a/game-runner/public/game/index.html
+++ b/game-runner/public/game/index.html
@@ -64,13 +64,13 @@
           const isMobile = isIOS || isAndroid;
 
           if (isMobile) {
-            window.COIN_MODEL_LIMIT = 4;
-            window.OBSTACLE_MODEL_LIMIT = 1;
+            window.COIN_MODEL_LIMIT = 7;
+            window.OBSTACLE_MODEL_LIMIT = 2;
             window.CITY_DECOR_MODEL_LIMIT = 2;
             window.CITY_BUILDING_MODEL_LIMIT = 2;
-            window.COIN_POOL_SIZE = 2;
-            window.OBSTACLE_POOL_SIZE = 2;
-            window.PLAYER_VARIANT = "girl";
+            window.COIN_POOL_SIZE = 3;
+            window.OBSTACLE_POOL_SIZE = 1;
+            window.PLAYER_VARIANT = "boy";
             window.ENABLE_TUTORIAL = true;
             if (isIOS && isSafari) {
               window.SPEED_MULTIPLIER = .8; // iOS Safari
