--- a/game-runner/public/game/index.html
+++ b/game-runner/public/game/index.html
@@ -103,12 +103,12 @@
             window.OBSTACLE_MODEL_LIMIT = 3;
             window.CITY_DECOR_MODEL_LIMIT = 4;
             window.CITY_BUILDING_MODEL_LIMIT = 3;
-            window.COIN_POOL_SIZE = 7;
+            window.COIN_POOL_SIZE = 5;
             window.OBSTACLE_POOL_SIZE = 3;
             window.PLAYER_VARIANT = "boy";
             window.ENABLE_TUTORIAL = true;
             if (isIOS && isSafari) {
-              window.SPEED_MULTIPLIER = .8; // iOS Safari
+              window.SPEED_MULTIPLIER = 1.9; // iOS Safari
             } else if (isAndroid && isChrome) {
               window.SPEED_MULTIPLIER = .9; // Android Chrome
             } else {
