--- a/game-runner/public/game/index.html
+++ b/game-runner/public/game/index.html
@@ -76,6 +76,26 @@
     <!-- fflate (requerido por FBXLoader r132) -->
     <script src="https://cdn.jsdelivr.net/npm/fflate@0.7.4/umd/index.min.js"></script>
 
+    <!-- Avatar/tutorial desde querystring: ?player_variant=girl|boy, ?tutorial=0|1|true|false  -->
+    <script>
+      (function () {
+        try {
+          var params = new URLSearchParams(location.search || "");
+          var raw = (params.get("player_variant") || "").toLowerCase();
+          if (raw === "girl" || raw === "boy") {
+            window.PLAYER_VARIANT = raw;
+          }
+          var t = params.get("tutorial");
+          if (t != null) {
+            var tnorm = String(t).toLowerCase();
+            window.ENABLE_TUTORIAL = tnorm === "1" || tnorm === "true";
+          }
+        } catch (e) {
+          console.warn("[config] variant query parse failed", e);
+        }
+      })();
+    </script>
+
     <!-- Ajustes por plataforma -->
     <script>
       (function () {
@@ -105,8 +125,10 @@
             window.CITY_BUILDING_MODEL_LIMIT = 3;
             window.COIN_POOL_SIZE = 5;
             window.OBSTACLE_POOL_SIZE = 3;
-            window.PLAYER_VARIANT = "boy";
-            window.ENABLE_TUTORIAL = true;
+            //window.PLAYER_VARIANT = "boy";
+            if (typeof window.ENABLE_TUTORIAL === "undefined") {
+              window.ENABLE_TUTORIAL = true;
+            }
             if (isIOS && isSafari) {
               window.SPEED_MULTIPLIER = 1.9; // iOS Safari
             } else if (isAndroid && isChrome) {
@@ -121,8 +143,10 @@
             window.CITY_BUILDING_MODEL_LIMIT = 3;
             window.COIN_POOL_SIZE = 8;
             window.OBSTACLE_POOL_SIZE = 5;
-            window.PLAYER_VARIANT = "boy";
-            window.ENABLE_TUTORIAL = true;
+            //window.PLAYER_VARIANT = "boy";
+            if (typeof window.ENABLE_TUTORIAL === "undefined") {
+              window.ENABLE_TUTORIAL = true;
+            }
             if (isSafari) {
               window.SPEED_MULTIPLIER = .8; // macOS Safari
             } else if (isChrome) {
