Fixed some bugs

--- a/game-runner/public/game/index.html
+++ b/game-runner/public/game/index.html
@@ -46,6 +46,17 @@
     </div>
 
     <div id="startScreen">
+      <div id="introBar">
+        <span>
+          <img src="./assets/2d/introDesktopLeft.png"/>
+        </span>
+        <span>
+          <img src="./assets/2d/introDesktopRight.png"/>
+        </span>
+      </div>
+      <span id="introBoy">
+        <img src="./assets/2d/introDesktopBoy.png" />
+      </span>
         <div class="start-banner">
             <span class="start-banner__icon" aria-hidden="true">
               <img src="./assets/2d/informacion.svg" alt="" />
