--- a/game-runner/public/game/index.html
+++ b/game-runner/public/game/index.html
@@ -82,17 +82,6 @@
         <div class="tutorial-card" id="tutorialInstruction"></div>
     </div>
 
-    <div id="rejectionPopup" class="rejection-popup" role="alertdialog" aria-modal="true" aria-labelledby="rejectionTitle" aria-describedby="rejectionDescription" hidden>
-        <div class="rejection-popup__content">
-            <div class="rejection-popup__icon" aria-hidden="true"></div>
-            <h2 id="rejectionTitle">Lamentablemente la factura que subiste no es válida</h2>
-            <p id="rejectionDescription">
-                Por favor, asegúrate de que el archivo sea legible, esté en formato JPG, PNG o PDF, y contenga toda la información necesaria para su validación. Por esta razón, los puntos que acumulaste no podrán ser validados.
-            </p>
-            <button type="button" id="rejectionExitButton">Volver al inicio</button>
-        </div>
-    </div>
-
     <!-- Librerías pedidas -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/FBXLoader.js"></script>
@@ -143,6 +132,9 @@
             window.LIVES_MAX = 3;
           }
           //window.PLAYER_VARIANT = "girl";
+          if (typeof window.SPEED_MULTIPLIER === "undefined") {
+            window.SPEED_MULTIPLIER = 1;
+          }
           if (isMobile) {
             window.COIN_MODEL_LIMIT = 7;
             window.OBSTACLE_MODEL_LIMIT = 3;
@@ -154,13 +146,6 @@
             if (typeof window.ENABLE_TUTORIAL === "undefined") {
               window.ENABLE_TUTORIAL = true;
             }
-            if (isIOS && isSafari) {
-              window.SPEED_MULTIPLIER = 1; // iOS Safari
-            } else if (isAndroid && isChrome) {
-              window.SPEED_MULTIPLIER = .5; // Android Chrome
-            } else {
-              window.SPEED_MULTIPLIER = 1.02; // otros móviles
-            }
           } else {
             window.COIN_MODEL_LIMIT = 7;
             window.OBSTACLE_MODEL_LIMIT = 3;
@@ -171,13 +156,6 @@
             //window.PLAYER_VARIANT = "boy";
             if (typeof window.ENABLE_TUTORIAL === "undefined") {
               window.ENABLE_TUTORIAL = true;
-            }
-            if (isSafari) {
-              window.SPEED_MULTIPLIER = 1.4; // macOS Safari
-            } else if (isChrome) {
-              window.SPEED_MULTIPLIER = .1; // Windows/Linux Chrome
-            } else {
-              window.SPEED_MULTIPLIER = 1.02; // otros desktop
             }
           }
           if (typeof window.CHARACTER_SATURATION === "undefined") {
